@@ -9,6 +9,12 @@
 
 namespace irr
 {
+
+namespace gui
+{
+	class IGUIFont;
+}
+
 namespace scene
 {
 
@@ -50,8 +56,18 @@ public:
 	//! sets the text string
 	virtual void setText(const wchar_t* text) = 0;
 
+	//! get the text string
+	virtual const wchar_t* getText() const = 0;
+
 	//! sets the color of the text
-	virtual void setTextColor(video::SColor color) = 0;
+	//! You can use setColor instead which does the same
+	virtual void setTextColor(video::SColor color)
+	{
+		setColor(color);
+	}
+
+	//! Get the font used to draw the text
+	virtual gui::IGUIFont* getFont() const = 0;
 };
 
 } // end namespace scene
